# aviutl-GLShaderKit

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  vcpkg-configuration.json  vcpkg.json
docs/api/: GLShaderKit.FrameBuffer.md  GLShaderKit.Program.md  GLShaderKit.Texture.md  GLShaderKit.Vertex.md  GLShaderKit.md  README.md
docs/def/: GLShaderKit_def.lua
docs/spec/: api.schema.json  framebuffer.yaml  glshaderkit_module.yaml  program.yaml  texture.yaml  vertex.yaml
example/: GLShaderKit_drawPoints_02.vert  GLShaderKit_draw_04.frag  GLShaderKit_effectInstanced.anm  GLShaderKit_effect_01.frag  GLShaderKit_gaussianBlur.anm  GLShaderKit_multiShader_2.frag  GLShaderKit_uniform.frag  README.md
example/draw/: GLShaderKit_draw_02.vert  README.md
example/drawPoints/: GLShaderKit_drawPoints_01.vert  GLShaderKit_drawPoints_02.frag  README.md
example/effect/: GLShaderKit_effect.anm  GLShaderKit_effect_02.frag  GLShaderKit_effect_03.frag  README.md
example/effectInstanced/: GLShaderKit_effectInstanced_01.frag  README.md
example/gaussianBlur/: GLShaderKit_gaussianBlur.frag  README.md
example/info/: README.md
example/multiShader/: GLShaderKit_multiShader_1.frag  README.md
example/multiTexture/: GLShaderKit_multiTexture.frag  README.md
example/uniform/: GLShaderKit_uniform.frag  README.md
src/: GLShaderKit.ini  GLShaderKit.lua  cache.hpp  config.hpp  gl_context.cpp  gl_context.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_shader.cpp  gl_shader.hpp  gl_shader_manager.cpp  gl_shader_manager.hpp  gl_texture.cpp  gl_texture.hpp  gl_uniform.cpp  gl_uniform.hpp  gl_vertex.cpp  gl_vertex.hpp  log.hpp  lua_helper.cpp  lua_helper.hpp  main.cpp  release.cpp  release.hpp
test/script/: GLShaderKit_effect.anm
test/shader/: test001.frag  test002.frag  test003.frag  test203.vert  test301.vert
tests/: move_only.hpp  test_cache.cpp  test_config.cpp  test_release.cpp
tests/data/: config_load.ini  config_load_negative.ini
tools/: doc_types.py  gen_api_definition.py  gen_api_doc.py  gen_api_schema.py
